--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+h1 {
+    @apply text-4xl bg-slate-500 p-10 text-white text-center hover:bg-blue-400 underline;
+}
